fix vertical alignment

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -19,7 +19,12 @@ input[type="radio"] ~ label {
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,700");
 
 .navigation {
-  position: relative;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 
   .leftArrow,
   .rightArrow {
